# OpenTypes

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
doc/: Projektbericht.tex
src/: Helper.hpp  Helper2.hpp  OpenTypes.h  Person.hpp  main.cpp  my_types.hpp  open_types.hpp  open_types2.hpp
src/Types/: Car.hpp  List.hpp  Person.extended.hpp  Person.hpp  Person2.hpp
test/: Attributes.test.cpp  Config.hpp  Relations.test.cpp  Types.test.cpp  main.cpp  test.cpp  test_types.hpp
test/Types/: Car.hpp  Person.hpp  Skill.hpp
